--- a/src/Empleados/RegistrarEmpleados.form
+++ b/src/Empleados/RegistrarEmpleados.form
@@ -83,6 +83,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="id_empleado">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
       <BindingProperties>
         <BindingProperty name="nextFocusableComponent" source="nom_empleado" target="id_empleado" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
       </BindingProperties>
@@ -192,7 +195,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="600" y="340" width="90" height="-1"/>
+          <AbsoluteConstraints x="600" y="350" width="90" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -332,7 +335,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="600" y="310" width="90" height="-1"/>
+          <AbsoluteConstraints x="600" y="320" width="90" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -384,7 +387,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="600" y="280" width="90" height="-1"/>
+          <AbsoluteConstraints x="600" y="280" width="90" height="30"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -446,7 +449,7 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="600" y="370" width="90" height="-1"/>
+          <AbsoluteConstraints x="600" y="380" width="90" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
