--- a/src/Empleados/RegistrarEmpleados.form
+++ b/src/Empleados/RegistrarEmpleados.form
@@ -85,6 +85,9 @@
     <Component class="javax.swing.JTextField" name="id_empleado">
       <Properties>
         <Property name="editable" type="boolean" value="false"/>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="cc" green="cc" red="cc" type="rgb"/>
+        </Property>
       </Properties>
       <BindingProperties>
         <BindingProperty name="nextFocusableComponent" source="nom_empleado" target="id_empleado" targetPath="nextFocusableComponent" updateStrategy="0" immediately="false"/>
