Creacion de Modulo de Seguridad y Logger

--- a/src/inicio_sesion/Pantalla_Inicio_Sesion.form
+++ b/src/inicio_sesion/Pantalla_Inicio_Sesion.form
@@ -50,6 +50,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="txt_usuario">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="170" y="300" width="174" height="30"/>
@@ -70,6 +73,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txt_pass">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+      </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="170" y="340" width="174" height="30"/>
@@ -129,7 +135,7 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Bienvenido al Sistema "/>
         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-          <Color id="Cursor Por defecto"/>
+          <Color id="Default Cursor"/>
         </Property>
       </Properties>
       <Constraints>
